--- a/index.html
+++ b/index.html
@@ -37,27 +37,20 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <li class="pokemon">
-                <span class="number">#001</span>
-                <span class="name">bulbasaur</span>
-
-                <div class="detail">
-                    <ol class="types">
-                        <li class="type">grass</li>
-                        <li class="type">poison</li>
-                    </ol>
-
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                        alt="bulbasaur">
-                </div>
-
-
-            </li>
-
+            
         </ol>
+
+        <div class="pagination">
+            <button id="loadMore" type="button">Load More</button>
+        </div>
+        
     </section>
 
+
+    <script src="./assets/js/pokemonModel.js"></script>
+    <script src="./assets/js/pokeApi.js"></script>
     <script src="./assets/js/main.js"></script>
+
 </body>
 
 </html>
