--- a/index.html
+++ b/index.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
-
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/css/global.css">
-    <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <title>Pokedex</title>
 
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Roboto Font -->
+    <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
-
-
-    <!-- Nosso JS -->
-    <title>Pokedex - DIO</title>
-
-
+    <!-- Nosso CSS -->
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/pokedex.css">
 </head>
 
 <body>
-
-
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            
+        <ol id="pokemonList" class="pokemons">            
+            <!-- ..... Pokemons here ..... -->
         </ol>
 
-        <div class="pagination">
-            <button id="loadMore" type="button">Load More</button>
+
+        <div class="modal" style="display: none;">
+            <div class="modal-content">
+                <h1 class="modal-name"></h1>
+                <img class="modal-image" src="" alt="">
+                <p class="modal-types"></p>
+                <button class="modal-close">Close</button>
+            </div>
         </div>
         
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
+        </div>
     </section>
 
-
-    <script src="./assets/js/pokemonModel.js"></script>
-    <script src="./assets/js/pokeApi.js"></script>
-    <script src="./assets/js/main.js"></script>
-
+    <!-- Nosso JS -->
+    <script src="/assets/js/modal.js"></script>
+    <script src="/assets/js/pokemon-model.js"></script>
+    <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
